--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,6 @@
 </div>
 {% endblock %}
 {% block content %} <div class="container">
-         <div class="page-header">
-             <h1>Hello, {{ name }}!</h1>
-         </div>
+        {% block page_content %}{% endblock %}
      </div>
-{% endblock %}
-{% block scripts %}
-    {{ super() }}
-    <script type="javascript" src="jinjaname.js"></script>
 {% endblock %}
