--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
              </div>
              <div class="navbar-collapse collapse">
                  <ul class="nav navbar-nav">
-                     <li><a href="/">Home</a></li>
+                     <li><a href="{{ realurl }}">Home</a></li>
                      <li><a href="/">contact us</a></li>
                  </ul>
              </div>
