--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% extends "bootstrap/base.html" %}
 {% block title %}ButterFlask{% endblock %}
+{% block body %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
          <div class="container">
@@ -22,7 +23,25 @@
          </div>
 </div>
 {% endblock %}
+
+
 {% block content %} <div class="container">
-        {% block page_content %}{% endblock %}
+        {% block page_content %}
+
+        {% endblock %}
      </div>
 {% endblock %}
+
+{% block footer %}
+<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+        <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+{% endblock footer %}
+
+{% block scripts %}
+    {{ super() }}
+
+    {{ moment.include_moment() }}
+ {{ moment.lang('zh-CN') }}
+{% endblock %}
+{% endblock %}
+
