--- a/templates/jinjaname.html
+++ b/templates/jinjaname.html
@@ -4,7 +4,15 @@
 
 {% block page_content %}
          <div class="page-header">
+             {% if name %}
              <h1>Hello, {{ name }}!</h1>
+             {% else %}
+             <h1>Hello, stranger!</h1>
+
+             {% endif %}
+{% import "bootstrap/wtf.html" as wtf %}
+             {{ wtf.quick_form(form) }}
+
          </div>
 
 {% endblock %}
